# teb_melodic_workspace

./: .gitignore  README.md
plots/fig4_test_setup/scripts/: plotting.py
plots/fig5/data/: ces_curvature.txt  ces_traversal_distance.txt  hobca_curvature.txt  hobca_traversal_distance.txt  ias_curvature.txt  ias_traversal_distance.txt  teb_curvature.txt  teb_traversal_distance.txt
plots/fig5/scripts/: plotting.py
src/global_planner/maps/: parallel_parking.pgm  parallel_parking.yaml
src/global_planner/src/: test_global_plan_node.cpp
src/teb_local_planner/: CMakeLists.txt
src/teb_local_planner/cfg/: carlike_teb_local_planner_params.yaml  rviz_test_optim.rviz
src/teb_local_planner/launch/: test_optim_node.launch
src/teb_local_planner/msg/: FeedbackMsg.msg  PoseSeqMsg.msg
src/teb_local_planner/scripts/: cmd_vel_to_ackermann_drive.py  dt_0.1_test_results.csv  dt_0.2_test_results.csv  dt_0.3_test_results.csv  dt_0.4_test_results.csv  dt_0.5_test_results.csv  publish_feedback.py  publish_global_plan.py  publish_parking_boundaries.py  publish_viapoints.py  (+9 more)
src/teb_local_planner_testing/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/teb_local_planner_testing/cfg/carlike/: costmap_common_params.yaml  costmap_converter_params.yaml  teb_local_planner_params.yaml
src/teb_local_planner_testing/launch/: robot_carlike_in_stage.launch
src/teb_local_planner_testing/scripts/: publish_parking_boundaries.py  visualize_velocity_profile.py
src/teb_local_planner_testing/stage/: empty_box.world
src/teb_local_planner_testing/stage/robots/: carlike_robot.inc
(+888 files in other folders)
